--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,27 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <div id="heading" class="box">
+        <h1>
+            <%=kindOfDay %>
+        </h1>
+    </div>
 
-    <h1>
-        <%=kindOfDay %>
-    </h1>
+    <div class="box">
+        <ul>
+            <% for(var i=0; i < newListItems.length; i++) { %>
+                <div class="item">
+                    <input type="checkbox">
+                    <p>
+                        <%= newListItems[i] %>
+                    </p>
+                </div>
 
-    <ul>
-        <% for(var i=0; i < newListItems.length; i++) { %>
-            <li>
-                <%= newListItems[i] %>
-            </li>
-            <% } %>
-    </ul>
+                <% } %>
+        </ul>
+    </div>
 
 
-
-    <form action="/" method="POST">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">ADD</button>
+    <form class=" box-form " action="/" method="POST">
+        <input type="text" name="newItem" placeholder=" New item" autocomplete="off">
+        <button type="submit" name="button">+</button>
 
     </form>
 </body>
