--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
+<%- include ("header.ejs")-%>
     <div id="heading" class="box">
         <h1>
-            <%=kindOfDay %>
+            <%=listTitle %>
         </h1>
     </div>
 
@@ -32,9 +22,8 @@
 
     <form class=" box-form " action="/" method="POST">
         <input type="text" name="newItem" placeholder=" New item" autocomplete="off">
-        <button type="submit" name="button">+</button>
+        <button type="submit" name="list" value=<%=listTitle %>>+</button>
 
     </form>
-</body>
 
-</html>
+    <%- include ("footer.ejs")-%>
